[gd_scene load_steps=21 format=2]

[ext_resource path="res://menus/Story.gd" type="Script" id=1]
[ext_resource path="res://images/story/player_1.png" type="Texture" id=2]
[ext_resource path="res://images/story/sun3.png" type="Texture" id=3]
[ext_resource path="res://images/story/player_2.png" type="Texture" id=4]
[ext_resource path="res://images/story/story_bg.png" type="Texture" id=5]
[ext_resource path="res://images/story/devil_man.png" type="Texture" id=6]
[ext_resource path="res://images/story/sun1.png" type="Texture" id=7]
[ext_resource path="res://images/story/sun2.png" type="Texture" id=8]
[ext_resource path="res://images/story/hell_fg_1.png" type="Texture" id=9]
[ext_resource path="res://images/story/hell_fg_3.png" type="Texture" id=10]
[ext_resource path="res://images/story/player_3.png" type="Texture" id=11]
[ext_resource path="res://images/story/hell_bg.png" type="Texture" id=12]
[ext_resource path="res://images/story/hell_bg_clear.png" type="Texture" id=13]
[ext_resource path="res://images/story/hell_fg_2.png" type="Texture" id=14]
[ext_resource path="res://images/story/hell_fg_0.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Story" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="Sun" type="AnimatedSprite" parent="."]
position = Vector2( 564, 76 )
frames = SubResource( 2 )

[node name="HellHoleBack" type="AnimatedSprite" parent="."]
position = Vector2( 321, 293 )
frames = SubResource( 4 )
centered = false

[node name="Devil" type="AnimatedSprite" parent="."]
position = Vector2( 398, 428 )
frames = SubResource( 6 )

[node name="HellHoleFront" type="AnimatedSprite" parent="."]
position = Vector2( 321, 293 )
frames = SubResource( 5 )
centered = false

[node name="Player" type="AnimatedSprite" parent="."]
position = Vector2( 130, 210 )
frames = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -120.0
custom_constants/margin_right = 150
custom_constants/margin_left = 150
custom_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="CanvasLayer/MarginContainer"]
margin_left = 150.0
margin_right = 490.0
margin_bottom = 115.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 335.0
margin_bottom = 110.0

[node name="Speaker" type="Label" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 330.0
margin_bottom = 14.0
size_flags_vertical = 0
text = "Devil:"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 330.0
margin_bottom = 23.0
custom_constants/margin_top = 5

[node name="Text" type="Label" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 330.0
margin_bottom = 87.0
size_flags_vertical = 3
text = "Hi
"
autowrap = true

[node name="Continue" type="Label" parent="CanvasLayer/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 91.0
margin_right = 330.0
margin_bottom = 105.0
text = "<SPACE>"
align = 2
uppercase = true

[node name="Panel2" type="Panel" parent="CanvasLayer/MarginContainer"]
margin_left = 150.0
margin_right = 490.0
margin_bottom = 115.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/MarginContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/Panel2/CenterContainer"]
margin_left = 76.0
margin_top = 47.0
margin_right = 264.0
margin_bottom = 67.0

[node name="DealButton" type="Button" parent="CanvasLayer/MarginContainer/Panel2/CenterContainer/HBoxContainer"]
margin_right = 70.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 20 )
text = "Deal"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/Panel2/CenterContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 114.0
margin_bottom = 20.0
custom_constants/margin_right = 40

[node name="NoDealButton" type="Button" parent="CanvasLayer/MarginContainer/Panel2/CenterContainer/HBoxContainer"]
margin_left = 118.0
margin_right = 188.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 20 )
text = "No Deal"

[node name="SkipCutscene" type="Button" parent="CanvasLayer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 101.0
margin_bottom = 20.0
text = "Skip Cutscene"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Panel2/CenterContainer/HBoxContainer/DealButton" to="." method="_on_DealButton_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Panel2/CenterContainer/HBoxContainer/NoDealButton" to="." method="_on_NoDealButton_pressed"]
[connection signal="pressed" from="CanvasLayer/SkipCutscene" to="." method="_on_SkipCutscene_pressed"]
